# mygettext

./: CMakeLists.txt
codelite/: mygettext.project
include/mygettext/: LocaleInfo.h  gettext.h  mygettext.h  readCatalog.h  utils.h
src/: CMakeLists.txt  LocaleInfo.cpp  gettext.cpp  gettext.h  main.h  mygettext.cpp  mygettext.h  mygettextDefines.h  readCatalog.cpp  utils.cpp
tests/: CMakeLists.txt  main.cpp  testLocaleInfo.cpp
win32/: mygettext.def
win32/vs2008/: mygettext.vcproj
win32/vs2010/: mygettext.vcxproj  mygettext.vcxproj.filters
win32/vs2012/: mygettext.vcxproj  mygettext.vcxproj.filters
